--- a/views/freelancers/freelancers.ejs
+++ b/views/freelancers/freelancers.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,15 +11,23 @@
   <div class="preloader-container" id="preloader">
     <div class="loader">
       <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
-  </div>
+    </div>
   </div>
   <script src="/js/preloader.js"></script>
   <section class="section-1 pd-t-2 pd-x-2">
-    <div class="pd-2 bg-gray-75 flex flex-row gap-2 rounded-md mg-0 flex-wrap justify-center items-center">
-     
+    <div class="pd-2 bg-gray-75 flex flex-row gap-2 rounded-md mg-0 flex-wrap items-center">
+      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
 
-      <!-- Filter Select -->
-      <select id="filtro-ordenacao" class="select-filter sm">
+      </div>
+      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
+
+      </div>
+      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
+
+      </div>
+
+      <h6 class="mg-0 .h6">Muitos Freelancers para Contratar</h6>
+      <select id="filtro-ordenacao" class="select-filter sm" style="margin-left: auto;">
         <option value="" selected>
           <span>nenhum</span>
         </option>
@@ -239,5 +248,7 @@
       }
     });
   </script>
+  <script type="module" src="/js/freelancers/freelancers.js"></script>
 </body>
+
 </html>
