--- a/public/css/cadastro/partials/section-2.css
+++ b/public/css/cadastro/partials/section-2.css
@@ -29,7 +29,7 @@ body {
     height: 100%;
     background: linear-gradient(
         45deg,
-        rgb(96, 0, 214) 0%,
+        #171616 0%,
         rgba(54, 0, 60, 0.1) 100%
     );
 }
