--- a/views/freelancers/freelancers.ejs
+++ b/views/freelancers/freelancers.ejs
@@ -15,14 +15,14 @@
   </div>
   <script src="/js/preloader.js"></script>
   <section class="section-1 pd-t-2 pd-x-2">
-    <div class="pd-2 bg-gray-75 flex flex-row gap-2 rounded-md mg-0 flex-wrap items-center">
+    <div class="pd-2 bg-gray-75 flex flex-row gap-2 rounded-md mg-0 flex-wrap items-center" style="overflow: hidden;">
       <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
 
       </div>
-      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
+      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6; margin-left: -15px;">
 
       </div>
-      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6;">
+      <div class="circulo" style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #3C38A6; margin-left: -15px;">
 
       </div>
 
