--- a/public/css/cadastro/partials/section-2.css
+++ b/public/css/cadastro/partials/section-2.css
@@ -19,6 +19,16 @@ body {
     background-color: var(--background);
 }
 
+.banneroverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg,rgba(0, 0, 0, 0.7) 0%, rgba(68, 19, 161, 0) 53%, rgba(0, 0, 0, 0.7) 100%);
+    z-index: 2;
+}
+
 .section-2 .banner {
     flex: 2;
     display: flex;
