--- a/public/css/cadastro/partials/section-3.css
+++ b/public/css/cadastro/partials/section-3.css
@@ -34,6 +34,16 @@ body {
     );
 }
 
+.banneroverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg,rgba(0, 0, 0, 0.7) 0%, rgba(68, 19, 161, 0) 53%, rgba(0, 0, 0, 0.7) 100%);
+    z-index: 2;
+}
+
 .section-3 .banner .slogan {
     color: var(--white);
     font-size: var(--f4);
