--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -1,10 +1,14 @@
 <head>
     <title>Cadastro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/css/cadastro/login.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="/css/cadastro/login.css">
 <section class="section-1">
-    <a href="/" style="position: absolute; left: 20; top: 20;"><button class="btn btn-primary" style="width: 20px; height: 40px; border-radius: 50px"><</button></a>
+    <a href="/" style="position: fixed; top: 30px; left: 30px; z-index: 9999;">
+        <button style="width: 40px; height: 40px; border-radius: 15px; background-color: var(--gray-50); color: var(--white); border: none; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.3);"> <ion-icon name="arrow-back-outline"></ion-icon> </button>
+      </a>
 
     <div class="banner">
         <div class="slogan">
