Componentes Link e Galeria -> Criar Projeto - Sem Banco de Dados

--- a/views/freelancers/freelancers.ejs
+++ b/views/freelancers/freelancers.ejs
@@ -26,7 +26,7 @@
 
       </div>
 
-      <h6 class="mg-0 .h6">Muitos Freelancers para Contratar</h6>
+      <h6 class="mg-0 .h6">Conecte-se com os Melhores Freelancers</h6>
       <select id="filtro-ordenacao" class="select-filter sm" style="margin-left: auto;">
         <option value="" selected>
           <span>nenhum</span>
