--- a/views/projects/create_project/create_project.ejs
+++ b/views/projects/create_project/create_project.ejs
@@ -73,10 +73,10 @@
 
 <div class="preloader-container" id="preloader">
     <div class="loader">
-      <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
-  </div>
-  </div>
-  <script src="/js/preloader.js"></script>
+        <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
+    </div>
+</div>
+<script src="/js/preloader.js"></script>
 
 <section class="flex flex-col h-full w-full">
     <div class="topbar w-full flex flex-row justify-between pd-2">
@@ -212,6 +212,28 @@
                 </div>
             </div>
         </div>
+        <div class="row flex flex-row gap-3 mg-b-2">
+            <div class="cardComponent" data-component="link" style="width: 240px;">
+                <div class="imgCard overflow-hidden rounded-lg"
+                    style="background-color: black; width: 240px; height: 140px;">
+                    <img src="assets/image/createproject/Imagem.jpg" alt="">
+                </div>
+                <div class="infoCard">
+                    <h2 class="text-lg font-medium text-white mg-0">Link</h2>
+                    <p class="text-xs text-gray-25 mg-0">Compartilhe links de seu projeto.</p>
+                </div>
+            </div>
+            <div class="cardComponent" data-component="galeria" style="width: 240px;">
+                <div class="imgCard overflow-hidden rounded-lg"
+                    style="background-color: black; width: 240px; height: 140px;">
+                    <img src="assets/image/createproject/Paleta de cores.jpg" alt="">
+                </div>
+                <div class="infoCard">
+                    <h2 class="text-lg font-medium text-white mg-0">Galeria personalizada</h2>
+                    <p class="text-xs text-gray-25 mg-0">Mostre sua criatividade em diferentes formatos</p>
+                </div>
+            </div>
+        </div>
     </div>
 </dialog>
 <div id="modalOverlay" class="modalOverlay"></div>
@@ -240,7 +262,7 @@
                 <label for="">Tags</label>
                 <div id="tagsInputBox" class="form-control mg-0 pd-0 w-full flex flex-row flex-wrap items-center gap-0">
                     <div id="tagsWrapper" class="flex items-center flex-row flex-wrap mg-0 pd-1">
-                        
+
                     </div>
                 </div>
                 <input type="hidden" id="tagsFinal" name="tagsFinal" />
