--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Projetos</title>
     <link rel="stylesheet" href="/css/index/index.css" />
+    <link rel="stylesheet" href="/css/components/modals.css" />
 
     <style>
       .preloader-container {
@@ -56,6 +57,7 @@
     <div
       class="modal-overlay"
       id="modal">
+      <div id="modalCloseBtn" class="close-modal btn bg-gray-100"><ion-icon name="close-outline" style="color: var(--white); font-size: 18px;"></ion-icon></div>
       <div class="floating-island" id="floatingIsland">
         <div class="island-content">
           <div class="island-left">
