--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,22 @@
     </section>
 
     <section class="section-2">
+      <div class="cardZoneTurbo pd-b-4 mg-0">
+        <div class="cardZoneHeader">
+          <h2>Projetos Turbinados</h2>
+        </div>
+        <section class="cardsTurbo">
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+            <div class="cardTurbinado"></div>
+        </section>
+      </div>
+
       <main class="card-zone-top" id="card-zone"></main>
     </section>
 
