mudanças no gulp, e alteração nos freelancers e Alterações no botão de TURBO

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,7 +16,7 @@
         <img src="/assets/image/logoWorkFlow-nome.svg" alt="Logo" class="footer-logo">
         <div class="linhaDivisoria"></div>
 
-        <span class="footer-text text-xs text-white">Junte-se a Plataforma <span style="font-weight: bold;">WorkFLow</span> e aproveite o máximo de oportunidades!</span>
+        <span class="footer-text text-xs text-white">Junte-se a Plataforma <span style="font-weight: bold;">WorkFlow</span> e aproveite o máximo de oportunidades!</span>
     </div>
     <a class="aRegister" id="aRegister" href="/register">
         <button class="btn btn-purple text-sm registrar buttonNav" id="btnCriarConta">Criar Conta</button>
