--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,15 +5,18 @@
                 <img class="logo" src="/assets/image/logoWorkFlow-com-nome.svg" alt="logoWorkFlow">
             </a>
             <div class="flex flex-row gap-4 items-center mg-0">
-                <button id="btnProjetoTurbo" class="btnProjetoTurbo sm btn sm-only" title="Impulsionar seu projeto">
-                    <p class="flex flex-row text-white text-sm mg-0 pd-x-1">
-                        <span>T</span>
-                        <span>u</span>
-                        <span>r</span>
-                        <span>b</span>
-                        <span>o</span>
-                    </p>
-                    <ion-icon name="flash-outline" class="text-white text-xl pd-x-1"></ion-icon>
+                    <div id="containerButtonSm" class="containerButtonSm" style="display: none;">
+                        <button id="btnProjetoTurboSM" class="btnProjetoTurbo sm btn sm-only" title="Impulsionar seu projeto">
+                            <p class="flex flex-row text-white text-sm mg-0 pd-x-1">
+                                <span>T</span>
+                                <span>u</span>
+                                <span>r</span>
+                                <span>b</span>
+                                <span>o</span>
+                            </p>
+                            <ion-icon name="flash-outline" class="text-white text-xl pd-x-1"></ion-icon>
+                        </button>
+                    </div>
                 </button>
                 <div class="hamburger">
                     <span></span>
@@ -42,17 +45,13 @@
             <a class="aLogin" id="aLogin" href="/login">
                 <button class="btn btn-ghost btn-white text-base buttonNav entrar" id="btnEntrar">Entrar</button>
             </a>
-            <a class="aRegister" id="aRegister" href="/register">
+            <a class="aRegister flex flex-row gap-2" id="aRegister" href="/register">
                 <button class="btn btn-purple text-sm registrar buttonNav" id="btnCriarConta">Criar Conta</button>
-            </a>
+                </a>
             <div id="userControls" class="userControls" style="display:none; align-items: center; gap: 12px;">
-                <button id="btnProjetoTurbo" class="btnProjetoTurbo large btn lg-only" title="Impulsionar seu projeto">
-                    <p class="flex flex-row text-white text-sm mg-0 pd-x-1">
-                        <span>T</span>
-                        <span>u</span>
-                        <span>r</span>
-                        <span>b</span>
-                        <span>o</span>
+                <button id="btnProjetoTurbo-lg" class="btnProjetoTurbo large btn lg-only" title="Impulsionar seu projeto">
+                    <p class="flex flex-row text-white text-sm mg-0 pd-x-1 underline-none">
+                        Turbo
                     </p>
                     <ion-icon name="flash-outline" class="text-white text-xl pd-x-1"></ion-icon>
                 </button>
@@ -495,9 +494,6 @@
     }
 
     @media (max-width: 990px) {
-        .sm-only {
-            display: flex !important;
-        }
 
         .lg-only {
             display: none !important;
@@ -571,4 +567,17 @@
             dialogTurbo.close();
         }
     });
+</script>
+
+<script>
+    const btnProjetoTurbo = document.getElementById('btnProjetoTurbo');
+const btnProjetoTurboLg = document.getElementById('btnProjetoTurbo-lg');
+
+if (user) {
+    if (btnProjetoTurbo) btnProjetoTurbo.style.display = 'flex';
+    if (btnProjetoTurboLg) btnProjetoTurboLg.style.display = 'flex';
+} else {
+    if (btnProjetoTurbo) btnProjetoTurbo.style.display = 'none';
+    if (btnProjetoTurboLg) btnProjetoTurboLg.style.display = 'none';
+}
 </script>
