Componente Link e Bugs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,7 @@
             </button>
             <button
               class="island-btn close-btn"
-              id="modalCloseBtn"
+              id="modalCloseBtnIsland"
               title="Fechar"
             >
               <svg
