--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Projetos</title>
     <link rel="stylesheet" href="/css/index/index.css" />
     <link rel="stylesheet" href="/css/components/modals.css" />
+    <link rel="stylesheet" href="/css/components/projects-turbo.css">
 
     <style>
       .preloader-container {
@@ -61,11 +62,10 @@
             <div class="cardTurbinado"></div>
         </section>
       </div>
-
-      <main class="card-zone-top" id="card-zone"></main>
     </section>
 
     <section class="section-3">
+      <h2>Principais Projetos</h2>
       <main class="card-zone" id="card-zone"></main>
     </section>
 
