--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -167,7 +167,7 @@
                     <li class="text-left text-white text-lg mg-0">Seu projeto será promovido automaticamente</li>
                 </ul>
             </div>
-            <button class="btn btn-purple">Aproveitar</button>
+            <button class="btn btn-purple" onclick="window.location.href='/turboProjects'">Aproveitar</button>
             <a class="close-dialog cursor-pointer">Não quero, Obrigado(a)</a>
         </div>
     </div>
